--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -5,6 +5,6 @@ spring.datasource.password=Nilushiya00#
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 
-## Hibernate Properties
-##spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=none
